--- a/checkin/templates/checkin/monitor.html
+++ b/checkin/templates/checkin/monitor.html
@@ -146,7 +146,7 @@
 
         <div class="coluna coluna-excedentes-concluidos">
             <div class="metade">
-                <h3>Pedidos Excedentes</h3>
+                <h3>Pedidos Pendentes</h3>
                 <div class="table-container">
                     <table class="table table-striped table-warning">
                         <thead>
