--- a/checkin/templates/checkin/checkin.html
+++ b/checkin/templates/checkin/checkin.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Checkin de Pedidos</title>
+
+    {% load static %}
+    <link rel="icon" href="{% static 'img/icon (2).ico' %}" type="image/x-icon">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
